--- a/Css/index.css
+++ b/Css/index.css
@@ -101,8 +101,15 @@ a {
   height: 5rem;
   width: 100%;
   background-color: var(--text-light);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  z-index: 100;
 }
 
+.header-section {
+  position: sticky;
+  top: 0;
+}
 .input input {
   height: 2rem;
   width: 30rem;
